--- a/src/modal.html
+++ b/src/modal.html
@@ -7,7 +7,7 @@
     Only Polygon and Bitmap shapes are supported. 
   </div>
 </sly-notification-2>
-<div class="mt10 mb10" style="color: #737272">
+<div class="mt10 mb10 ml10" style="color: #737272">
   <span>
     Labels with other types of shapes will be <strong>skipped</strong>.
     <br>We recommend you to use <a href="https://ecosystem.supervise.ly/apps/convert-class-shape">Convert Class Shape app</a> to convert class shapes.
